# BlueTooth

./: README.md  build.gradle  config.gradle  gradle.properties  platform_ultra.keystore  settings.gradle
Base/bluetoothtest/: build.gradle
Base/bluetoothtest/src/main/: AndroidManifest.xml
Base/bluetoothtest/src/main/java/com/example/bluetoothtest/: MainActivity.java
Base/bluetoothtest/src/main/java/com/example/bluetoothtest/bean/: AppRequestBean.java  DeviceModule.java  ParseLeAdvData.java  RequestBean.java
Base/bluetoothtest/src/main/java/com/example/bluetoothtest/bluetoothmanage/: BleBluetoothManage.java  ClassicBluetoothManage.java  ScanManager.java  TaskThread.java
Base/bluetoothtest/src/main/java/com/example/bluetoothtest/callback/: IDataCallback.java  IScanCallback.java
Base/bluetoothtest/src/main/java/com/example/bluetoothtest/service/: BluetoothLeService.java
Base/bluetoothtest/src/main/java/com/example/bluetoothtest/utli/: Analysis.java  DataMemory.java  ModuleParameters.java  ToolClass.java
Base/bluetoothtest/src/main/java/com/example/bluetoothtest/viewmodel/: MessageViewModel.java
Base/bluetoothtest/src/main/res/layout/: activity_main.xml
BusiServices/hems/: build.gradle
BusiServices/hems/src/androidTest/java/com/autel/busiservices/hems/: ExampleInstrumentedTest.kt
BusiServices/hems/src/main/java/com/autel/busiservices/hems/: HemsSystemService.kt
BusiServices/hems/src/test/java/com/autel/busiservices/hems/: ExampleUnitTest.kt
Core/LibCom/hems/: build.gradle
Core/LibCom/hems/src/androidTest/java/com/autel/core/libcom/hems/: ExampleInstrumentedTest.kt
Core/LibCom/hems/src/main/cpp/: CMakeLists.txt  HemsConfig.h.in
Core/LibCom/hems/src/main/cpp/Comm/: ByteField.cpp  ByteField.h  ClassFactory.h  CrossPlatDef.h  PublicFunc.cpp  PublicFunc.h  StrHelper.h  TaskInBack.cpp  TaskInBack.h  ThreadClass.cpp  ThreadClass.h
Core/LibCom/hems/src/main/cpp/Comm/autel_thread/: lock.cpp  lock.h  run.h  thread.cpp  thread.h  win_lock.inl.h
Core/LibCom/hems/src/main/cpp/DataMgr/: ConfigData.h  DataMgr.cpp  DataMgr.h  LocKer.h  SysData.h  V2XData.h
Core/LibCom/hems/src/main/cpp/Devices/: DevDetect.cpp  DevDetect.h  DevMgr.cpp  DevMgr.h
Core/LibCom/hems/src/main/cpp/Devices/APP/: AppSerialOperator.h
Core/LibCom/hems/src/main/cpp/Devices/ATS/: AtsOperator.cpp  AtsOperator.h
Core/LibCom/hems/src/main/cpp/HeartBeat/: HeartMonitor.cpp  HeartMonitor.h
Core/LibCom/hems/src/main/cpp/JniInterface/: HemsJniInterface.cpp  LogPrint.h
Core/LibCom/hems/src/main/cpp/LibCom/Serial/: SerialDev.cpp  SerialDev.h  SerialPortCore.cpp  SerialPortCore.h
Core/LibCom/hems/src/main/cpp/System/: HemsLib.cpp  HemsLib.h  HemsLibImpl.cpp  HemsLibImpl.h
Core/LibCom/hems/src/main/debug/: AndroidManifest.xml
Core/LibCom/hems/src/main/debug/res/layout/: activity_test_main.xml
Core/LibCom/hems/src/main/debug/res/values/: strings.xml  themes.xml
Core/LibCom/hems/src/main/java/com/autel/core/libcom/hems/: DeviceComService.kt
Core/LibCom/hems/src/main/java/com/autel/core/libcom/hems/data/: DataResult.kt  SelfCheckStatus.kt
Core/LibCom/hems/src/main/java/com/autel/core/libcom/hems/jni/: HemsSystemJni.kt
Core/LibCom/hems/src/main/java/com/autel/core/libcom/hems/protocol/: MsgBody.kt  MsgCode.kt  MsgProtocol.kt  SelfCheckMsgBody.kt  StatusMsgBody.kt
Core/LibCom/hems/src/main/java/com/autel/core/libcom/hems/tasks/: DeviceCommTask.kt  HeartBeatTask.kt  SelfCheckTask.kt
Core/LibCom/hems/src/main/res/values/: strings.xml
Core/LibCom/hems/src/main/res/values-zh/: strings.xml
Core/LibCom/hems/src/test/java/com/autel/core/libcom/hems/: ExampleUnitTest.kt
Utils/: BleUtil
app/: build.gradle
app/src/androidTest/java/com/autel/hems/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/autel/hems/: MainApplication.kt
app/src/main/java/com/autel/hems/model/: MainModel.kt
app/src/main/java/com/autel/hems/view/: MainActivity.kt  ViewEvent.kt
app/src/main/java/com/autel/hems/viewmodel/: MainViewModel.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/autel/hems/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
(+5 files in other folders)
